# optimus-opae-sdk

./: CMakeLists.txt
common/include/opae/: access.h  types_enum.h
common/include/vai/: fpga.h  malloc.h  vai.h  wrapper.h
libopae/src/: buffer.c  close.c  intel-fpga.h  open.c
libvai/: CMakeLists.txt
libvai/src/: malloc.c  malloc_internal.h  vai.c  vai_internal.h  vai_types.h  wrapper.c
samples/vai_hello_world/hw/: .gitignore
samples/vai_hello_world/hw/rtl/: cci_hello.json  cci_hello_afu.sv  sources.txt
samples/vai_hello_world/sw/: cci_hello.c
tests/test_mux_memcpy/hw/rtl/: cci_memcpy_afu.sv  cci_mux_test.sv  sources.txt
tests/test_mux_memcpy/sw/: cci_mux_test.c  cci_mux_test_ase
vai/: CMakeLists.txt
vai-ase/: CMakeLists.txt
vai-ase/api/: CMakeLists.txt
vai-ase/api/src/: common.c  common_int.h  malloc.c  vai.c  vai_afu_malloc.c  vai_internal.h  wrapper.c
vai-ase/sw/: ase_common.h  mem_model.c  protocol_backend.c
vai/api/: CMakeLists.txt
vai/rtl/: ccip_emulator.sv
vai/sw/: app_backend.c  ase_common.h
